--- a/styles.css
+++ b/styles.css
@@ -60,14 +60,15 @@ h1::before {
   color: #0cc0df;
 }
 
-.input {
+.input,
+.output {
   width: 360px;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 30px auto;
-  border: 1px solid #ccc;
+  border: 1px solid #ccccccc7;
   border-radius: 9px;
   /* padding: 20px 20px; */
   background-color: rgba(0, 0, 0, 0.205);
@@ -81,11 +82,49 @@ h1::before {
   transition: all 250ms ease-out;
 }
 
-.swtch-btn {
-  margin: 30px auto;
+/* .input::before {
+  content: 'Input';
+  font-size: 1.5rem;
+  color: white;
+  font-weight: 100;
+  margin-right: 100px;
 }
 
-.output {
+.output::before {
+  content: 'Output';
+  font-size: 1.5rem;
+  color: white;
+  font-weight: 100;
+  margin-right: 100px;
+} */
+
+.swtch-btn {
+  margin: 30px auto;
+  font-size: 2rem;
+  background-color: #2526276b;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 4px 45px;
+  color: white;
+  transition: all 250ms ease-out;
+  border: none;
+  box-shadow: 0 -10px 30px 0px rgba(0, 0, 0, 0.212);
+}
+
+.swtch-btn:hover,
+.copy-btn:hover {
+  background-color: #34353670;
+  transition: all 250ms ease-out;
+}
+.swtch-btn:active,
+.copy-btn:active {
+  background-color: #2526275b;
+  transition: all 30ms ease;
+  box-shadow: 0 -10px 30px 5px rgba(0, 0, 0, 0.212);
+}
+
+/* .output {
   width: 360px;
   color: white;
   display: flex;
@@ -94,10 +133,10 @@ h1::before {
   margin: 30px auto;
   border: 1px solid #ccc;
   border-radius: 9px;
-  /* padding: 20px 20px; */
+
   background-color: rgba(0, 0, 0, 0.205);
   backdrop-filter: blur(30px);
-}
+} */
 
 label::before {
   content: '';
@@ -118,13 +157,18 @@ label {
 }
 
 .copy-btn {
+  font-weight: 100;
   margin: 30px auto;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  background-color: #0cc0df;
-  color: white;
+  font-size: 1.2rem;
+  background-color: #2526276b;
+  display: inline-block;
   cursor: pointer;
+  border-radius: 4px;
+  padding: 10px 36px;
+  color: white;
+  transition: all 250ms ease-out;
+  border: none;
+  box-shadow: 0 -10px 30px 0px rgba(0, 0, 0, 0.212);
 }
 
 input {
@@ -138,7 +182,8 @@ input {
   width: 300px;
   padding: 30px;
   outline: none;
-  font-family: monospace;
+  font-weight: 100;
+  /* font-family: monospace; */
 }
 
 input[type='number']::-webkit-inner-spin-button,
@@ -146,4 +191,9 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearence: none;
   margin: 0;
   appearance: none;
+}
+
+.conv-group {
+  margin: auto 0;
+  width: 700px;
 }
