--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-image: url(images/gradient-background.png);
+  background-image: url(gradient-background.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
