--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .main-container {
-  width: 70%;
+  width: 80%;
   margin: 0 auto;
   text-align: center;
 }
@@ -35,15 +35,15 @@ body {
 h1 {
   margin: 6rem 2rem auto;
   font-weight: 200;
-  font-size: 6rem;
+  font-size: 3rem;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 30px;
+  gap: 20px;
 }
 
-h1::before {
+/* h1::before {
   content: 'MIDAS\A.dev';
   width: 90px;
   display: block;
@@ -55,7 +55,7 @@ h1::before {
   border-radius: 3px;
   text-align: right;
   white-space: pre;
-}
+} */
 
 .main-container span {
   color: #0cc0df;
@@ -217,7 +217,9 @@ input[type='number']::-webkit-outer-spin-button {
   h1 {
     font-size: 1.5rem; /* Reduce font size for smaller screens */
     margin: 3rem 1rem auto;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   h1::before {
@@ -273,5 +275,25 @@ input[type='number']::-webkit-outer-spin-button {
 
   label {
     margin-right: -60px;
+  }
+}
+
+@media screen and (max-width: 30rem) {
+  .input,
+  .output {
+    width: 224px; /* Make the input and output fields take up more width on mobile */
+    height: 50px;
+    margin: 20px auto; /* Reduce margin for smaller screens */
+    font-size: 1rem; /* Reduce font size for better visibility */
+  }
+  .input::before,
+  .output::before {
+    font-size: 1rem; /* Adjust label font size */
+    left: 10px; /* Adjust position to fit smaller screens */
+    margin-right: 20px; /* Adjust margin */
+  }
+  .disp-input,
+  .disp-output {
+    margin-right: 2%;
   }
 }
