--- a/styles.css
+++ b/styles.css
@@ -296,4 +296,14 @@ input[type='number']::-webkit-outer-spin-button {
   .disp-output {
     margin-right: 2%;
   }
+  .swtch-btn {
+    font-size: 1rem;
+    margin: 20px auto;
+  }
+  .copy-btn {
+    font-size: 1rem;
+    margin: 20px auto;
+    padding: 5px 20px;
+    margin: 15px auto;
+  }
 }
